--- a/Blame_inference.ipynb
+++ b/Blame_inference.ipynb
@@ -387,51 +387,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "5679d973",
    "metadata": {},
    "outputs": [],
    "source": [
     "# ---- 1. Load JSON dataset ----\n",
     "import json\n",
-    "json_path = \"/work/MarkusLundsfrydJensen#1865/inferece_data/inference_data.json\"\n",
+    "json_path = \"/work/MarkusLundsfrydJensen#1865/inferece_data/final_inference_data.json\"\n",
     "\n",
     "with open(json_path, 'r', encoding='utf-8') as f:\n",
-    "    data = json.load(f)\n",
-    "\n",
-    "\n",
-    "with open(\"/work/MarkusLundsfrydJensen#1865/inferece_data/preprocessed_inference_data.json\", 'r', encoding='utf-8') as f:\n",
-    "    pp_data = json.load(f)\n",
-    "\n",
-    "    \n",
-    "\n",
-    "\n"
+    "    data = json.load(f)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "14057d58",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5.087650373175583"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "((len(data)-len(pp_data))/len(data))*100"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": null,
    "id": "648c74d4",
    "metadata": {},
    "outputs": [],
@@ -439,14 +410,14 @@
     "\n",
     "\n",
     "# ---- 2. Extract texts ----\n",
-    "texts = [item[\"text\"] for item in new_data if \"text\" in item]\n",
+    "texts = [item[\"text\"] for item in data if \"text\" in item]\n",
     "\n",
     "# ---- 3. Run predictions in batches ----\n",
     "pred_classes, confidences = detector.run_prediction(texts)\n",
     "\n",
     "\n",
     "# ---- 4. Attach predictions back to data ----\n",
-    "for item, cls, conf in zip(new_data, pred_classes, confidences):\n",
+    "for item, cls, conf in zip(data, pred_classes, confidences):\n",
     "    item[\"predicted_class\"] = int(cls)\n",
     "    item[\"confidence\"] = float(conf)\n",
     "\n",
@@ -457,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": null,
    "id": "e60c3aa8",
    "metadata": {},
    "outputs": [
@@ -473,7 +444,7 @@
     }
    ],
    "source": [
-    "for entry in new_data:\n",
+    "for entry in data:\n",
     "    if entry[\"label\"] == 1:\n",
     "        print(entry[\"predicted_class\"])\n",
     "        print(entry[\"confidence\"])"
