--- a/Prelimenary_blame_detection.ipynb
+++ b/Prelimenary_blame_detection.ipynb
@@ -1988,7 +1988,7 @@
     "#draw 50 random samples from the blame data\n",
     "\n",
     "# Load your flattened JSON\n",
-    "with open(\"/work/MarkusLundsfrydJensen#1865/Bachelor_project/json_files/collapsed_sentences_5_and_4_and_3_and_2_and_1.json\", \"r\", encoding=\"utf-8\") as f:\n",
+    "with open(\"/work/MarkusLundsfrydJensen#1865/Training_data/cleaned_training_data_1_2_3_4_5_temps.json\", \"r\", encoding=\"utf-8\") as f:\n",
     "    data = json.load(f)\n",
     "\n",
     "# Sample 50 random entries\n",
@@ -2113,6 +2113,47 @@
     "path_output = \"/work/MarkusLundsfrydJensen#1865/Bachelor_project/json_files/v2_Gold_Gold_label_data.json\"\n",
     "\n",
     "merge_json_files(json_files = [true_blame_sample_path, false_blame_sample_path], output_file_path = path_output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "4a199430",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#For a thrid time randomly sample data but this time from the correct dataset\n",
+    "\n",
+    "import json\n",
+    "import random\n",
+    "\n",
+    "# Load JSON file\n",
+    "with open('/work/MarkusLundsfrydJensen#1865/Training_data/cleaned_training_data_1_2_3_4_5_temps.json', 'r') as f:\n",
+    "    data = json.load(f)\n",
+    "\n",
+    "# Filter entries by label\n",
+    "label_1_entries = [entry for entry in data if entry.get('label') == 1]\n",
+    "label_0_entries = [entry for entry in data if entry.get('label') == 0]\n",
+    "\n",
+    "# Ensure there are enough entries in both categories\n",
+    "if len(label_1_entries) < 50:\n",
+    "    raise ValueError(f\"Not enough entries with label=1. Only found {len(label_1_entries)}.\")\n",
+    "if len(label_0_entries) < 50:\n",
+    "    raise ValueError(f\"Not enough entries with label=0. Only found {len(label_0_entries)}.\")\n",
+    "\n",
+    "# Randomly sample 50 entries from each\n",
+    "sampled_1 = random.sample(label_1_entries, 50)\n",
+    "sampled_0 = random.sample(label_0_entries, 50)\n",
+    "\n",
+    "# Combine both samples\n",
+    "combined_sample = sampled_1 + sampled_0\n",
+    "\n",
+    "# (Optional) Shuffle the combined sample so labels are mixed\n",
+    "random.shuffle(combined_sample)\n",
+    "\n",
+    "# (Optional) Save the sample to a new JSON file\n",
+    "with open('/work/MarkusLundsfrydJensen#1865/annotation_data_v3.json', 'w') as f:\n",
+    "    json.dump(combined_sample, f, indent=4)\n"
    ]
   }
  ],
