validation data appended

--- a/analysis_gold_labeling.ipynb
+++ b/analysis_gold_labeling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "0ddde3a6",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "68cee196",
    "metadata": {},
    "outputs": [],
@@ -79,26 +79,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "80fcac79",
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_file_markus = \"/work/MarkusLundsfrydJensen#1865/Bachelor_project/json_files/v2_Gold_markus.json\"\n",
-    "output_file_markus = \"/work/MarkusLundsfrydJensen#1865/Bachelor_project/json_files/cleaned_labelled_markus.json\"\n",
+    "input_file_markus = \"/work/MarkusLundsfrydJensen#1865/Bachelor_project/json_files/Markus_annotation_data_v3.json\"\n",
+    "output_file_markus = \"/work/MarkusLundsfrydJensen#1865/Bachelor_project/json_files/v3_cleaned_labelled_markus.json\"\n",
     "\n",
     "read_labeled_data_reformat(input_file_markus, output_file_markus)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "02218753",
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_file_rune = \"/work/MarkusLundsfrydJensen#1865/Bachelor_project/json_files/v2_labelled_rune.json\"\n",
-    "output_file_rune = \"/work/MarkusLundsfrydJensen#1865/Bachelor_project/json_files/cleaned_labelled_rune.json\"\n",
+    "input_file_rune = \"/work/MarkusLundsfrydJensen#1865/Bachelor_project/json_files/v3_gold_rune.json\"\n",
+    "output_file_rune = \"/work/MarkusLundsfrydJensen#1865/Bachelor_project/json_files/v3_cleaned_labelled_rune.json\"\n",
     "\n",
     "read_labeled_data_reformat(input_file_rune, output_file_rune)"
    ]
@@ -122,7 +122,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
+   "id": "5afd47db",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['paragraph', 'sentence_nr', 'text', 'speaker', 'party', 'preceding_sentence', 'succeeding_sent', 'current_speaker_in_government', 'parties_in_government', 'date', 'Blame', 'choices'])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "markus_data[0].keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "id": "67863ba2",
    "metadata": {},
    "outputs": [],
@@ -134,8 +155,12 @@
     "    paragraph_nr = entry['paragraph']\n",
     "    sentence_nr = entry['sentence_nr']\n",
     "\n",
-    "    model_blame = entry[\"Blame\"]\n",
+    "    try:\n",
+    "        model_blame = entry[\"Blame\"]\n",
+    "    except:\n",
+    "        model_blame = entry[\"label\"]\n",
     "\n",
+    "    \n",
     "    markus_choice = entry[\"choices\"]\n",
     "    \n",
     "    rune_choice = get_choices(rune_data, paragraph_nr, sentence_nr)\n",
@@ -154,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "id": "0551e213",
    "metadata": {},
    "outputs": [
@@ -162,14 +187,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "88.0\n",
-      "12.0\n"
+      "86.0\n",
+      "14.000000000000002\n"
      ]
     }
    ],
    "source": [
-    "print((len(inter_annotater_agreement)/200)*100)\n",
-    "print((len(inter_annotater_disagreement)/200)*100)\n",
+    "print((len(inter_annotater_agreement)/300)*100)\n",
+    "print((len(inter_annotater_disagreement)/300)*100)\n",
     "\n"
    ]
   },
@@ -181,13 +206,13 @@
    "outputs": [],
    "source": [
     "'''\n",
-    "inter-annotater agreement of 88%\n",
+    "inter-annotater agreement of 86%\n",
     "'''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "id": "e5b9b666",
    "metadata": {},
    "outputs": [],
@@ -199,7 +224,10 @@
     "    paragraph_nr = entry['paragraph']\n",
     "    sentence_nr = entry['sentence_nr']\n",
     "\n",
-    "    model_blame = entry[\"Blame\"]\n",
+    "    try:\n",
+    "        model_blame = entry[\"Blame\"]\n",
+    "    except:\n",
+    "        model_blame = entry[\"label\"]\n",
     "\n",
     "    markus_choice = entry[\"choices\"]\n",
     "    \n",
@@ -219,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "id": "c4acb9f6",
    "metadata": {},
    "outputs": [
@@ -227,14 +255,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "76.5\n",
-      "23.5\n"
+      "80.66666666666666\n",
+      "19.333333333333332\n"
      ]
     }
    ],
    "source": [
-    "print((len(agreement_with_model)/200)*100)\n",
-    "print((len(disagreement_with_model)/200)*100)"
+    "print((len(agreement_with_model)/300)*100)\n",
+    "print((len(disagreement_with_model)/300)*100)"
    ]
   },
   {
@@ -245,13 +273,13 @@
    "outputs": [],
    "source": [
     "'''\n",
-    "One or more annotaters agreee with the model 76.5% of the samples\n",
+    "One or more annotaters agreee with the model 80% of the samples\n",
     "'''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "id": "a134de77",
    "metadata": {},
    "outputs": [
@@ -259,7 +287,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "77.8409090909091\n"
+      "81.3953488372093\n"
      ]
     }
    ],
@@ -294,7 +322,7 @@
     }
    ],
    "source": [
-    "#in 77.8 percent of all cases where both annotaters agreed, \n",
+    "#in 81.4 percent of all cases where both annotaters agreed, \n",
     "# the labels of the PolDebate model also agreed"
    ]
   },
@@ -311,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "id": "7ec58b87",
    "metadata": {},
    "outputs": [
@@ -319,7 +347,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "66.66666666666666\n"
+      "75.0\n"
      ]
     }
    ],
@@ -359,14 +387,14 @@
     "'''\n",
     "\n",
     "a rather even, at least to some extend, distribution of blame/no_blame in \n",
-    "inter-annotater disagreeement, where 66% were classified as blame by the PolDebate \n",
+    "inter-annotater disagreeement, where 75% were classified as blame by the PolDebate \n",
     "\n",
     "'''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "id": "f6c20b1e",
    "metadata": {},
    "outputs": [
@@ -374,7 +402,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "47.72727272727273\n"
+      "45.93023255813954\n"
      ]
     }
    ],
@@ -429,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "id": "aa34690b",
    "metadata": {},
    "outputs": [
@@ -437,7 +465,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved 176 matching entries to filtered_output.json.\n"
+      "Saved 258 matching entries to filtered_output.json.\n"
      ]
     }
    ],
@@ -452,7 +480,7 @@
     "match_set = {(str(p), str(s)) for p, s in matches}\n",
     "\n",
     "# --- Load the JSON file ---\n",
-    "with open(\"/work/MarkusLundsfrydJensen#1865/Bachelor_project/json_files/cleaned_labelled_markus.json\", \"r\", encoding=\"utf-8\") as f:\n",
+    "with open(\"/work/MarkusLundsfrydJensen#1865/Bachelor_project/json_files/v3_cleaned_labelled_markus.json\", \"r\", encoding=\"utf-8\") as f:\n",
     "    data = json.load(f)\n",
     "\n",
     "# --- Filter matching entries ---\n",
