Readying pipe for training set choice

--- a/training_pipeline_345_temp.ipynb
+++ b/training_pipeline_345_temp.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "b2dc543b",
    "metadata": {},
    "outputs": [
@@ -110,48 +110,41 @@
    ],
    "source": [
     "lora_config = LoraConfig(\n",
-    "    r=8,  # Low-rank dimension\n",
-    "    lora_alpha=16,\n",
+    "    r=16,  # Low-rank dimension\n",
+    "    lora_alpha=32,\n",
     "    lora_dropout=0.05,\n",
-    "    target_modules=[\"Wqkv\"],  # Fine-tuning the attention layer specifically\n",
+    "    target_modules=\"all-linear\",  # Fine-tuning all linear (classification, attention... layers)\n",
     ")\n",
     "\n",
-    "lora_model = get_peft_model(model, lora_config)\n",
-    "lora_model.print_trainable_parameters()"
+    "model = prepare_model_for_kbit_training(model)\n",
+    "model = get_peft_model(model, lora_config)\n",
+    "model.print_trainable_parameters()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "f2659a94",
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''\n",
-    "Consider the batch size, could be increased for efficiency purposes.\n",
-    "ADD WEIGHTED LOSS FUNCTION FOR HITS ON 1 FOR POSITIVE LABELLING AS THIS IS WAY MORE RARE = HIGHER \"REWARD\"\n",
-    "Have a look at learning rate and gradient norm clipping which I need to read up on.\n",
-    "    In addition to this, look at the implications of gradient accumulation steps\n",
-    "    Much of this pipeline was constrained due to computational restrictions which I think was caused by errors and not actual training process.\n",
-    "Early stopping: load_best_model_at_end=True\n",
-    "'''\n",
-    "\n",
     "training_args = TrainingArguments(\n",
-    "    output_dir='./results',\n",
-    "    learning_rate=8e-4, # Learning rate copied from mmBERT paper as they found this to perform best\n",
+    "    report_to='wandb',\n",
+    "    output_dir='./full_tune_results',\n",
+    "    optim=\"paged_adamw_8bit\",\n",
+    "    learning_rate=1e-4, # Learning rate copied from mmBERT paper on embedding sweep of LR (1e-4) as they found this to perform best\n",
     "    num_train_epochs=3,\n",
-    "    per_device_train_batch_size=8,\n",
-    "    auto_find_batch_size=True, # Allows for auto adjusting of batch to avoid OOM\n",
-    "    gradient_accumulation_steps=12,  # Simulate larger batch size\n",
-    "\n",
+    "    per_device_train_batch_size=256, # Batching at 256 to balance generalization and efficient training\n",
+    "    gradient_accumulation_steps=1,  # Gradient of 1 as full batch fits in memory, accumulation then only slows\n",
     "    logging_steps=1,\n",
     "    eval_strategy=\"epoch\",\n",
     "    save_strategy=\"epoch\",\n",
-    "    fp16=True,  # Enable mixed precision\n",
-    "    dataloader_pin_memory=False,\n",
+    "    bf16=True,  # Enable mixed precision\n",
+    "    fp16=False,\n",
+    "    dataloader_pin_memory=True,\n",
+    "    dataloader_num_workers=8,\n",
     "    remove_unused_columns=True, # Avoiding manual handling of residual text columns\n",
     "    max_grad_norm=1.0,\n",
-    "\n",
     "    disable_tqdm=False,\n",
     ")"
    ]
@@ -171,15 +164,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "69c3942d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# From dataframe to dataset for mapping tokenizer function \n",
-    "\n",
-    "def tokenize_function(example):\n",
-    "    return tokenizer(example[\"text\"], padding=\"max_length\", truncation=True)"
+    "def tokenize_function(examples):\n",
+    "    return tokenizer(examples[\"text\"], \n",
+    "    padding=\"max_length\", \n",
+    "    truncation=True,\n",
+    "    max_length=512, # Padding to 512 to massively cut down on computation compared to base 8,192 tokens. \n",
+    "    )"
    ]
   },
   {
@@ -213,19 +208,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
+   "id": "bd22494d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def weighted_bincrossentropy(true, pred, weight_zero = 99.0, weight_one = 1):\n",
+    "    \"\"\"\n",
+    "    Calculates weighted binary cross entropy. The weights are fixed to represent class imbalance in the dataset.\n",
+    "        \n",
+    "    For example if there are 10x as many positive classes as negative classes,\n",
+    "        if you adjust weight_zero = 1.0, weight_one = 0.1, then false positives \n",
+    "        will be penalized 10 times as much as false negatives.\n",
+    "\n",
+    "    \"\"\"\n",
+    "  \n",
+    "    # calculate the binary cross entropy\n",
+    "    bin_crossentropy = binary_crossentropy(true, pred)\n",
+    "    \n",
+    "    # apply the weights\n",
+    "    weights = true * weight_one + (1. - true) * weight_zero\n",
+    "    #weights /= (weight_one + weight_zero) # Normalizing to be more consistent with regular BCE for comparison \n",
+    "    weighted_bin_crossentropy = weights * bin_crossentropy \n",
+    "\n",
+    "    return np.mean(weighted_bin_crossentropy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "de44b8ab",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.metrics import accuracy_score, f1_score\n",
     "\n",
     "def compute_metrics(eval_pred):\n",
     "    predictions, labels = eval_pred\n",
-    "    predictions = np.argmax(predictions, axis=1)\n",
+    "    #From logits to probabilities\n",
+    "    probs_2d = np.exp(predictions) / np.exp(predictions).sum(axis=1, keepdims=True)\n",
+    "    probs = probs_2d[:, 1]  # positive class extraction\n",
+    "    \n",
+    "    weigthted_bce = weighted_bincrossentropy(labels, probs)\n",
+    "    keras_bce = binary_crossentropy(labels, probs)\n",
+    "    keras_bce = float(np.mean(keras_bce.numpy()))  # Converting from keras eagertensor to float value\n",
+    "    \n",
+    "    # Wrapping all metrics to floats for json serialization during model eval\n",
     "    return {\n",
-    "        'accuracy': accuracy_score(labels, predictions),\n",
-    "        'f1': f1_score(labels, predictions, average='macro') # Macro is better suited for imbalanced data\n",
+    "        'keras_BCE': keras_bce,\n",
+    "        'weighted BCE': weigthted_bce,\n",
+    "        'recall': float(recall_score(labels, probs.round())),\n",
+    "        'precision': float(average_precision_score(labels, probs)),\n",
+    "        'accuracy': float(accuracy_score(labels, probs.round())), # Need rounding for these two computations (integer required)\n",
+    "        'f1': float(f1_score(labels, probs.round(), average='macro')) # macro f1 is better for imbalanced dataset\n",
     "    }"
    ]
   },
@@ -236,13 +270,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''\n",
-    "This has still not been tested, but will be implemented soon\n",
-    "'''\n",
-    "\n",
+    "# Custom trainer class (weigthed)\n",
     "from collections import Counter\n",
     "\n",
-    "labels = random_dataset['label'].tolist()\n",
+    "labels = test_dataframe['label'].tolist()\n",
     "class_counts = Counter(labels)\n",
     "total = sum(class_counts.values())\n",
     "\n",
@@ -254,7 +285,7 @@
     "import torch.nn as nn\n",
     "\n",
     "class WeightedTrainer(Trainer):\n",
-    "    def compute_loss(self, model, inputs, return_outputs=False):\n",
+    "    def compute_loss(self, model, inputs, return_outputs=False, num_items_in_batch=None):\n",
     "        labels = inputs.get(\"labels\")\n",
     "        outputs = model(**inputs)\n",
     "        logits = outputs.get(\"logits\")\n",
@@ -268,28 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "9891306a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Column([0, 0, 1, 0, 1])"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tokenized_dataset[\"label\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "a36abd6d",
    "metadata": {},
    "outputs": [
@@ -356,11 +366,17 @@
     }
    ],
    "source": [
-    "trainer = Trainer(\n",
-    "    model=lora_model,\n",
+    "'''\n",
+    "Look into learning rates, model is currently overfitting quite drastically (\"small\" test-set)\n",
+    "Normalizing weigthed BCE or no?\n",
+    "Look into regularization, dropout and early stopping to avoid overfitting\n",
+    "'''\n",
+    "\n",
+    "trainer = WeightedTrainer(\n",
+    "    model=model,\n",
     "    args=training_args,\n",
-    "    train_dataset=tokenized_dataset,\n",
-    "    eval_dataset=tokenized_val,#split_dataset[\"test\"],\n",
+    "    train_dataset=tokenized_test,\n",
+    "    eval_dataset=tokenized_val,\n",
     "    compute_metrics=compute_metrics,\n",
     ")\n",
     "\n",
