validation set update maybe

--- a/analysis_gold_labeling.ipynb
+++ b/analysis_gold_labeling.ipynb
@@ -510,6 +510,33 @@
     "\n",
     "print(f\"Saved {len(filtered_entries)} matching entries to filtered_output.json.\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "5c6f7e96",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "258"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import json\n",
+    "\n",
+    "\n",
+    "with open(\"/work/MarkusLundsfrydJensen#1865/Bachelor_project/Model_data/validation_set.json\", \"r\", encoding=\"utf-8\") as f:\n",
+    "    data = json.load(f)\n",
+    "\n",
+    "len(data)\n"
+   ]
   }
  ],
  "metadata": {
