--- a/Blame_inference.ipynb
+++ b/Blame_inference.ipynb
@@ -96,10 +96,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "example = \"Goddad min kære ven, jeg kan virkelig godt lide dig.\"\n",
+    "'''example = \"Goddad min kære ven, jeg kan virkelig godt lide dig.\"\n",
     "\n",
     "BD = BlameDetectorDa()\n",
-    "BD.run_prediction(text = example)"
+    "BD.run_prediction(text = example)'''"
    ]
   },
   {
